tests/release_compile_fails/incorrect_verbosity_should_fail_compiles.rs
use cli_toolbox::release;

fn main() {
    release! { @err-terse println!("this should fail") }

    release! { @err-verbose println!("this should fail") }

    release! { @foo println!("this should fail") }
}